Work on errors, control panel, and reports

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -8,6 +8,14 @@
 	border-radius: 0 !important;
 }
 
+/* error page */
+
+.error-image {
+	margin-top: 30px;
+	margin-bottom: 30px;
+	max-width: 350px;
+}
+
 /* tinymce */
 
 .tox-menubar {
