--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -9,7 +9,8 @@
 }
 
 [timestamp][absolute-timestamp]:hover::after{
-	display: inline-block;
+	/* display: inline-block; */
+	display: none;
 	position: absolute;
 	margin-left: 10px;
 	margin-top: -4px;
